z-index fix

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -515,7 +515,7 @@ $dark-grey: #5E6E7D;
         left: 50%;
         transform: translateX(-50%);
         box-shadow: 3px 3px 3px #333;
-        z-index: 10;
+        z-index: 12;
         background-color: #8AACCF;
         padding: 25px;
         border-radius: 15px;
